force-app/main/default/objects/PDRI__Environment_Setting__c/PDRI__Environment_Setting__c.object-meta.xml
<CustomObject>
    <label>Environment Setting</label>
    <nameField>
        <displayFormat>ES-{0}</displayFormat>
        <label>Environment Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>