force-app/main/default/objects/PDRI__Environment_Setting__c/fields/PDRI__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>