force-app/main/default/objects/PDRI__Environment_Setting__c/fields/PDRI__Duration__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Duration__c</fullName>
    <label>Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>