force-app/main/default/objects/PDRI__Environment_Setting__c/fields/PDRI__Features__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>MultiCurrency</fullName>
            </value>
            <value>
                <fullName>PersonAccounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>