force-app/main/default/objects/PDRI__Environment_Setting__c/fields/PDRI__Generated_Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Generated_Environment_Type__c</fullName>
    <label>Generated Environment Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>