force-app/main/default/objects/PDRI__Environment_Setting__c/fields/PDRI__Managed_Environment__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Managed_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Environment</label>
    <referenceTo>PDRI__Managed_Environment__c</referenceTo>
    <relationshipLabel>Environment Settings</relationshipLabel>
    <relationshipName>Environment_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>