force-app/main/default/objects/PDRI__Environment_Setting__c/fields/PDRI__Salesforce_Package_Ids__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Salesforce_Package_Ids__c</fullName>
    <label>Salesforce Package IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>